tests/invalid/noSpreadingTuples.ts
// @ts-nocheck
const tuple = [1, "hello"] as const;
const arr = [...tuple];
